Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -462,22 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Greenville', 'Buenos Aires', 'Los Cabos']"
+       "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[1:4]"
+    "top_travel_cities[0:2]"
    ]
   },
   {
