--- a/index.ipynb
+++ b/index.ipynb
@@ -1164,7 +1164,7 @@
     {
      "data": {
       "text/plain": [
-       "14"
+       "15"
       ]
      },
      "execution_count": 32,
@@ -1196,6 +1196,7 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
+       " 'San Antonio',\n",
        " 'San Antonio',\n",
        " 'Solta']"
       ]
